# serializer version: 1
# name: test_sensor_update_exceptions[CannotConnect][sensor.pyload_active_downloads-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_active_downloads',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Active downloads',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.ACTIVE: 'active'>,
    'unique_id': 'XXXXXXXXXXXXXX_active',
    'unit_of_measurement': 'downloads',
  })
# ---
# name: test_sensor_update_exceptions[CannotConnect][sensor.pyload_active_downloads-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'pyLoad Active downloads',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'downloads',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_active_downloads',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_update_exceptions[CannotConnect][sensor.pyload_downloads_in_queue-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_downloads_in_queue',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Downloads in queue',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.QUEUE: 'queue'>,
    'unique_id': 'XXXXXXXXXXXXXX_queue',
    'unit_of_measurement': 'downloads',
  })
# ---
# name: test_sensor_update_exceptions[CannotConnect][sensor.pyload_downloads_in_queue-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'pyLoad Downloads in queue',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'downloads',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_downloads_in_queue',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_update_exceptions[CannotConnect][sensor.pyload_free_space-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_free_space',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Free space',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.FREE_SPACE: 'free_space'>,
    'unique_id': 'XXXXXXXXXXXXXX_free_space',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor_update_exceptions[CannotConnect][sensor.pyload_free_space-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'pyLoad Free space',
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_free_space',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_update_exceptions[CannotConnect][sensor.pyload_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfDataRate.MEGABITS_PER_SECOND: 'Mbit/s'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
    'original_icon': None,
    'original_name': 'Speed',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.SPEED: 'speed'>,
    'unique_id': 'XXXXXXXXXXXXXX_speed',
    'unit_of_measurement': <UnitOfDataRate.MEGABITS_PER_SECOND: 'Mbit/s'>,
  })
# ---
# name: test_sensor_update_exceptions[CannotConnect][sensor.pyload_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_rate',
      'friendly_name': 'pyLoad Speed',
      'unit_of_measurement': <UnitOfDataRate.MEGABITS_PER_SECOND: 'Mbit/s'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_update_exceptions[CannotConnect][sensor.pyload_total_downloads-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_total_downloads',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total downloads',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.TOTAL: 'total'>,
    'unique_id': 'XXXXXXXXXXXXXX_total',
    'unit_of_measurement': 'downloads',
  })
# ---
# name: test_sensor_update_exceptions[CannotConnect][sensor.pyload_total_downloads-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'pyLoad Total downloads',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'downloads',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_total_downloads',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_update_exceptions[InvalidAuth][sensor.pyload_active_downloads-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_active_downloads',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Active downloads',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.ACTIVE: 'active'>,
    'unique_id': 'XXXXXXXXXXXXXX_active',
    'unit_of_measurement': 'downloads',
  })
# ---
# name: test_sensor_update_exceptions[InvalidAuth][sensor.pyload_active_downloads-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'pyLoad Active downloads',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'downloads',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_active_downloads',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_update_exceptions[InvalidAuth][sensor.pyload_downloads_in_queue-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_downloads_in_queue',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Downloads in queue',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.QUEUE: 'queue'>,
    'unique_id': 'XXXXXXXXXXXXXX_queue',
    'unit_of_measurement': 'downloads',
  })
# ---
# name: test_sensor_update_exceptions[InvalidAuth][sensor.pyload_downloads_in_queue-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'pyLoad Downloads in queue',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'downloads',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_downloads_in_queue',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_update_exceptions[InvalidAuth][sensor.pyload_free_space-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_free_space',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Free space',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.FREE_SPACE: 'free_space'>,
    'unique_id': 'XXXXXXXXXXXXXX_free_space',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor_update_exceptions[InvalidAuth][sensor.pyload_free_space-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'pyLoad Free space',
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_free_space',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_update_exceptions[InvalidAuth][sensor.pyload_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfDataRate.MEGABITS_PER_SECOND: 'Mbit/s'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
    'original_icon': None,
    'original_name': 'Speed',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.SPEED: 'speed'>,
    'unique_id': 'XXXXXXXXXXXXXX_speed',
    'unit_of_measurement': <UnitOfDataRate.MEGABITS_PER_SECOND: 'Mbit/s'>,
  })
# ---
# name: test_sensor_update_exceptions[InvalidAuth][sensor.pyload_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_rate',
      'friendly_name': 'pyLoad Speed',
      'unit_of_measurement': <UnitOfDataRate.MEGABITS_PER_SECOND: 'Mbit/s'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_update_exceptions[InvalidAuth][sensor.pyload_total_downloads-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_total_downloads',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total downloads',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.TOTAL: 'total'>,
    'unique_id': 'XXXXXXXXXXXXXX_total',
    'unit_of_measurement': 'downloads',
  })
# ---
# name: test_sensor_update_exceptions[InvalidAuth][sensor.pyload_total_downloads-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'pyLoad Total downloads',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'downloads',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_total_downloads',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_update_exceptions[ParserError][sensor.pyload_active_downloads-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_active_downloads',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Active downloads',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.ACTIVE: 'active'>,
    'unique_id': 'XXXXXXXXXXXXXX_active',
    'unit_of_measurement': 'downloads',
  })
# ---
# name: test_sensor_update_exceptions[ParserError][sensor.pyload_active_downloads-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'pyLoad Active downloads',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'downloads',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_active_downloads',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_update_exceptions[ParserError][sensor.pyload_downloads_in_queue-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_downloads_in_queue',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Downloads in queue',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.QUEUE: 'queue'>,
    'unique_id': 'XXXXXXXXXXXXXX_queue',
    'unit_of_measurement': 'downloads',
  })
# ---
# name: test_sensor_update_exceptions[ParserError][sensor.pyload_downloads_in_queue-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'pyLoad Downloads in queue',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'downloads',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_downloads_in_queue',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_update_exceptions[ParserError][sensor.pyload_free_space-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_free_space',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Free space',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.FREE_SPACE: 'free_space'>,
    'unique_id': 'XXXXXXXXXXXXXX_free_space',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_sensor_update_exceptions[ParserError][sensor.pyload_free_space-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'pyLoad Free space',
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_free_space',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_update_exceptions[ParserError][sensor.pyload_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfDataRate.MEGABITS_PER_SECOND: 'Mbit/s'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
    'original_icon': None,
    'original_name': 'Speed',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.SPEED: 'speed'>,
    'unique_id': 'XXXXXXXXXXXXXX_speed',
    'unit_of_measurement': <UnitOfDataRate.MEGABITS_PER_SECOND: 'Mbit/s'>,
  })
# ---
# name: test_sensor_update_exceptions[ParserError][sensor.pyload_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_rate',
      'friendly_name': 'pyLoad Speed',
      'unit_of_measurement': <UnitOfDataRate.MEGABITS_PER_SECOND: 'Mbit/s'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_update_exceptions[ParserError][sensor.pyload_total_downloads-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_total_downloads',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total downloads',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.TOTAL: 'total'>,
    'unique_id': 'XXXXXXXXXXXXXX_total',
    'unit_of_measurement': 'downloads',
  })
# ---
# name: test_sensor_update_exceptions[ParserError][sensor.pyload_total_downloads-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'pyLoad Total downloads',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'downloads',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_total_downloads',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_setup[sensor.pyload_active_downloads-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_active_downloads',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Active downloads',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.ACTIVE: 'active'>,
    'unique_id': 'XXXXXXXXXXXXXX_active',
    'unit_of_measurement': 'downloads',
  })
# ---
# name: test_setup[sensor.pyload_active_downloads-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'pyLoad Active downloads',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'downloads',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_active_downloads',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_setup[sensor.pyload_downloads_in_queue-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_downloads_in_queue',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Downloads in queue',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.QUEUE: 'queue'>,
    'unique_id': 'XXXXXXXXXXXXXX_queue',
    'unit_of_measurement': 'downloads',
  })
# ---
# name: test_setup[sensor.pyload_downloads_in_queue-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'pyLoad Downloads in queue',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'downloads',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_downloads_in_queue',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6',
  })
# ---
# name: test_setup[sensor.pyload_free_space-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_free_space',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_SIZE: 'data_size'>,
    'original_icon': None,
    'original_name': 'Free space',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.FREE_SPACE: 'free_space'>,
    'unique_id': 'XXXXXXXXXXXXXX_free_space',
    'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
  })
# ---
# name: test_setup[sensor.pyload_free_space-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_size',
      'friendly_name': 'pyLoad Free space',
      'unit_of_measurement': <UnitOfInformation.GIBIBYTES: 'GiB'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_free_space',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '93.1322574606165',
  })
# ---
# name: test_setup[sensor.pyload_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfDataRate.MEGABITS_PER_SECOND: 'Mbit/s'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
    'original_icon': None,
    'original_name': 'Speed',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.SPEED: 'speed'>,
    'unique_id': 'XXXXXXXXXXXXXX_speed',
    'unit_of_measurement': <UnitOfDataRate.MEGABITS_PER_SECOND: 'Mbit/s'>,
  })
# ---
# name: test_setup[sensor.pyload_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_rate',
      'friendly_name': 'pyLoad Speed',
      'unit_of_measurement': <UnitOfDataRate.MEGABITS_PER_SECOND: 'Mbit/s'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '43.247704',
  })
# ---
# name: test_setup[sensor.pyload_total_downloads-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.pyload_total_downloads',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total downloads',
    'platform': 'pyload',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': <PyLoadSensorEntity.TOTAL: 'total'>,
    'unique_id': 'XXXXXXXXXXXXXX_total',
    'unit_of_measurement': 'downloads',
  })
# ---
# name: test_setup[sensor.pyload_total_downloads-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'pyLoad Total downloads',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'downloads',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.pyload_total_downloads',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '37',
  })
# ---
